--- a/styles/header.css
+++ b/styles/header.css
@@ -15,20 +15,36 @@
 	z-index: 0;
 }
 
+.header::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 30%;
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(17, 17, 17, 1) 100%);
+	z-index: 1;
+}
+
+
 .navi-bar {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	height: 50px;
+	height: 60px;
 	width: 100%;
 	z-index: 100;
+	position: sticky;
+	top: 0;
 }
+
+
 
 .navi-bar img {
 	height: 30px;
 	width: auto;
 	object-fit: contain;
-	margin-top: 20px;
+	margin-top: 10px;
 	margin-left: 10px;
 	margin-right: 10px;
 }
@@ -45,15 +61,16 @@
 
 .series-name {
 	font-size: 40pt;
-	font-weight: 600;
-	margin-bottom: 5px;
+	font-weight: 700;
+	margin-bottom: 0;
 }
 
 .detail-info button {
-	background-color: rgba(58, 58, 58, 0.4);
+	background-color: rgba(79, 79, 79, 0.4);
 	color: white;
-	width: 100px;
 	height: 30px;
+	padding-left: 35px;
+	padding-right: 35px;
 	font-weight: bold;
 	border: none;
 	border-radius: 5px;
