--- a/styles/header.css
+++ b/styles/header.css
@@ -49,6 +49,22 @@
 	margin-right: 10px;
 }
 
+.profile-button .tooltip {
+	position: absolute;
+	background-color: gray;
+	padding: 2px 4px 2px 4px;
+	right: 4px;
+	bottom: -10px;
+	border-radius: 2px;
+	font-size: 12px;
+	opacity: 0;
+	transition: opacity 0.15s;
+	white-space: nowrap;
+}
+
+.profile-button:hover .tooltip {
+	opacity: 0.9;
+}
 
 .detail-info {
 	position: absolute;
