--- a/styles/main.css
+++ b/styles/main.css
@@ -49,9 +49,10 @@
 
 .poster-image {
 	width: 100%;
-	transition: transform 0.2s;
+	transition: transform 0.5s;
 }
 
 .poster-image:hover {
 	transform: scale(1.3);
+	cursor: pointer;
 }
